<resources>
    <string name="app_name">愚者の图书馆</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_book_result">BookResultActivity</string>
    <string name="title_activity_books_list">我的书单</string>
    <string name="title_activity_feed_back">反馈</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_about_libris">关于 愚者の图书馆</string>
    <string name="title_activity_hot_search">热门搜索Top100</string>
    <string name="title_activity_borrwing_status">借阅情况</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">搜索</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="drawer_list_index">首页</string>
    <string name="drawer_list_status">借阅状态</string>
    <string name="drawer_list_mylist">我的书单</string>
    <string name="drawer_list_settings">设置</string>
    <string name="drawer_list_feedback">反馈</string>
    <string name="menu_drawer_main">首页</string>
    <string name="menu_drawer_status">借阅状态</string>
    <string name="menu_drawer_bookslist">我的书单</string>
    <string name="main_drawre_other">其他</string>
    <string name="menu_drawer_settings">设置</string>
    <string name="menu_drawer_feedback">反馈</string>
    <string name="title_activity_book_info">BookInfoActivity</string>

    <string name="placeholder_subtitle">次标题</string>
    <string name="placeholder_title">主标题</string>
    <string name="action_share">分享</string>

    <!--LoginActivity STRING-->
    <string name="login_announcement">登录声明</string>
    <string name="login_username_hint">锐捷账号</string>
    <string name="login_password_hint">密码</string>
    <string name="title_activity_login">登录</string>
    <string name="feedback_btn">发送</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_delete">删除书单</string>
    <string name="action_share_all">分享全部</string>

    <string-array name="search_function">
        <item>分享</item>
        <item>收藏到书单</item>
    </string-array>
    <string-array name="search_function_done">
        <item>分享</item>
        <item>已添加到书单</item>
    </string-array>
    <string-array name="bookslist_function">
        <item>分享</item>
        <item>删除</item>
    </string-array>
    <string-array name="share_list">
        <item>朋友圈</item>
        <item>微信好友</item>
        <item>其他</item>
    </string-array>

    <string name="open_source_wasabeef">Copyright 2015 Wasabeef

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>

    <string name="open_source_swipebacklayout">Copyright 2013 Issac Wong

Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at

 http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="open_source_materialdialog">
    The MIT License (MIT)

    Copyright (c) 2015 Aidan Michael Follestad

    Permission is hereby granted, free of charge, to any person obtaining a copy
    of this software and associated documentation files (the "Software"), to deal
    in the Software without restriction, including without limitation the rights
    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
    copies of the Software, and to permit persons to whom the Software is
    furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in all
    copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
    SOFTWARE.</string>
    <string name="open_source_persistentsearch">
        Copyright 2015 Kieron Quinn

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
    </string>
</resources>
