<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="cn.diviniti.toarunolibris.Login.LoginActivity">

    <include
        android:id="@id/toolbar"
        layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/mainPrimaryColor"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:src="@drawable/img_login_logo" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColorHint="@android:color/white"
            app:hintAnimationEnabled="true">

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/login_username_hint"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColorHint="@android:color/white"
            app:hintAnimationEnabled="true">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:hint="@string/login_password_hint"
                android:inputType="textWebPassword"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/login_btn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:clickable="true"
            app:cardBackgroundColor="@color/mainPrimaryColorDark"
            app:cardElevation="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_activity_login"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>
